# Internex

./: dev-server.js
assets/: app.js  index.html  internex.runtime.js  style.css
internex/: go.mod
internex/cmd/server/: main.go
internex/internal/rewriter/: rust_bridge.go
internex/internal/transport/: fetch.go  headers.go  server.go  sessions.go  urls.go
internex_rewriter/: Cargo.toml
internex_rewriter/src/: csp.rs  css.rs  html.rs  js.rs  lib.rs  url.rs
