[package]
name = "internex_rewriter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
html5ever = "0.26"
kuchikiki = "0.8"
cssparser = "0.34"
url = "2"
serde = "=1.0.197"
serde_derive = "=1.0.197"
serde_json = "=1.0.114"
markup5ever = "0.11"
log = "0.4"
base64 = "0.22"
percent-encoding = "2"
